test/parser.d/valid/subroutines1.souc
main() = do
	write_n 4

write_n(n) = do
	print n
