test/parser.d/invalid/subroutine.souc
main() = do
	cause_explosion
end main

	cause_explosion

